app/css/home.css
/*mobile style*/

.switchingPicsContainer {
	display: flex;
	width:100%;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
}

.switchingPicsContainer img {
	width: 90%;

}


/*desktop style*/
@media only screen and (min-width: 1100px) {

	#homeMain {
		font-size: 2.4vw;
	}

	.switchingPicsContainer {
		height:80vh;
		justify-content: space-around;
		align-items: center;
		flex-direction: row;
	}

	.switchingPicsContainer img {
		position: absolute;
	}

}

.swap-animation.ng-enter, .swap-animation.ng-leave {
    transition:1.5s linear all;
}
.swap-animation.ng-enter {
    opacity: 0;
}
.swap-animation.ng-enter-active {
    opacity: 1;
}
.swap-animation.ng-leave {
    opacity: 0.5;
}
.swap-animation.ng-leave-active {
    opacity: 0;
}

